Issue on rich editor on dark mode due to summernotes css vs bulma. used bulma css for summernotes Fixes #124

--- a/cm_main/static/cm_main/css/cm_main.css
+++ b/cm_main/static/cm_main/css/cm_main.css
@@ -106,6 +106,21 @@ rich-text is for text displayed in pages, note-editable is for the text inside t
   list-style: decimal;
   margin-left: 2rem;
 }
+.note-frame {
+	--bulma-input-h: var(--bulma-scheme-h);
+  --bulma-input-s: var(--bulma-scheme-s);
+  --bulma-input-border-style: solid;
+  --bulma-input-border-width: 1px;
+  --bulma-input-border-l: var(--bulma-border-l);
+  box-shadow: inset 0 .0625em .125em hsla(var(--bulma-scheme-h),var(--bulma-scheme-s),var(--bulma-scheme-invert-l),.05);
+  max-width: 100%;
+  width: 100%;
+  color: hsl(var(--bulma-input-h),var(--bulma-input-s),var(--bulma-input-color-l));
+  font-family: var(--bulma-body-family);
+	font-size: var(--bulma-control-size);
+	border-color: hsl(var(--bulma-input-h),var(--bulma-input-s),calc(var(--bulma-input-border-l) + var(--bulma-input-border-l-delta))) !important;
+  border-radius: var(--bulma-input-radius);
+}
 
 @media screen {
 	.mini-avatar {
